# qwen2.5-Omni-FT

./: README.md  dataset.py  demo.ipynb  demo.py  generator.py  pyproject.toml  train.py  train_w_trainer.py  utils.py
conf/: config.yaml
